Fix: Add pwa-config.js to art.html for bus icon display
Apply same fix as nbs.html and abs.html:
- art.html was missing pwa-config.js script
- art.js uses window.PWAConfig to build bus icon paths
- Without pwa-config.js, window.PWAConfig was undefined
- This caused bus icons to fail loading in Bus Stop Details page

Now all Buszy pages that display bus icons have pwa-config.js:
✓ index.html (Pinned)
✓ nbs.html (Nearby)
✓ abs.html (Search)
✓ art.html (Bus Stop Details)
✓ first-last.html (First/Last Bus Timings)

--- a/buszy/art.html
+++ b/buszy/art.html
@@ -717,6 +717,8 @@
 
     <script src="../js/utils.js"></script>
 
+    <script src="../js/pwa-config.js"></script>
+
     <script src="js/art.js"></script>
 
     <script>
