--- a/rail-buddy/settings.html
+++ b/rail-buddy/settings.html
@@ -13,7 +13,7 @@
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
 
-    <link rel="manifest" href="../manifest-dt.json">
+    <link rel="manifest" href="./manifest.json">
 
     <link rel="icon" href="../buszy/assets/icon-512.png">
     <meta name="theme-color" content="#121521">
