--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 
                     <div class="apps-grid">
                         <!-- app 1 -->
-                        <a href="buszy.html" class="app-card">
+                        <a href="buszy/index.html" class="app-card">
                             <div class="app-thumbnail-link">
                                 <img src="img/bg-img/buszy-thumb.png" alt="Buszy - Bus Arrival Timings"
                                     class="app-thumbnail">
@@ -398,7 +398,7 @@
                         </a>
 
                         <!-- app 2 -->
-                        <a href="rail-buddy.html" class="app-card">
+                        <a href="rail-buddy/index.html" class="app-card">
                             <div class="app-thumbnail-link">
                                 <img src="img/bg-img/railbuddy-thumb.png" alt="RailBuddy - Stay on track, always"
                                     class="app-thumbnail">
