--- a/buszy/ann.html
+++ b/buszy/ann.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <script>if(localStorage.getItem('dark-mode')==='enabled'){document.documentElement.classList.add('dark-mode');document.documentElement.style.background='#121521';}</script>
+    <script>if (localStorage.getItem('dark-mode') === 'enabled') { document.documentElement.classList.add('dark-mode'); document.documentElement.style.background = '#121521'; }</script>
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
@@ -238,6 +238,33 @@
                         your bus stop data to get the most up to date information.</p>
                 </a>
                 <hr>
+                <a href="https://landtransportguru.net/sklrt-west-single-loop-ops-apr-oct-2026/"
+                    class="list-group-item list-group-item-action flex-column align-items-start">
+                    <div class="d-flex">
+                        <div>
+                            <h5 class="lg-ann">Service Adjustments - SKLRT</h5>
+                            <small class="lg-date">20 Feb 2026</small>
+                        </div>
+                    </div>
+                    <p class="mb-1" style="cursor: pointer;">
+                        The West Inner Loop of the Sengkang LRT Line will be closed from 19 April 2026 to 18 October
+                        2026. This is to facilitate the track works needed to integrate the existing LRT line with the
+                        expanded Sengkang LRT Depot.</p>
+                </a>
+                <a href="https://landtransportguru.net/ecid-ewl-closure-mar26/"
+                    class="list-group-item list-group-item-action flex-column align-items-start">
+                    <div class="d-flex">
+                        <div>
+                            <h5 class="lg-ann">Service Adjustments - EWL</h5>
+                            <small class="lg-date">20 Feb 2026</small>
+                        </div>
+                    </div>
+                    <p class="mb-1" style="cursor: pointer;">
+                        The East-West Line (EWL) will be closed between Tanah Merah–Expo from Saturday, 14 March 2026 to
+                        Tuesday, 17 March 2026. This is to disconnect the reception tracks linking the EWL with Changi
+                        Depot, following the operationalisation of the new East Coast Integrated Depot (ECID) in
+                        December 2025..</p>
+                </a>
                 <a href="https://landtransportguru.net/ccl-degraded-service-jan-apr-26/"
                     class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="d-flex">
