--- a/buszy/settings.html
+++ b/buszy/settings.html
@@ -116,7 +116,7 @@
         <nav aria-label="breadcrumb" style="margin-bottom:0;">
             <ol class="breadcrumb breadcrumb-fixed" id="floating-breadcrumb">
                 <li class="breadcrumb-item">
-                    <a href="./">
+                    <a href="index.html">
                         <i class="fa-regular fa-house"></i>
                     </a>
                 </li>
@@ -132,12 +132,12 @@
     <nav class="navbar-container">
         <div class="navbar">
             <!-- Logo -->
-            <a href="./"><img src="assets/logo.png" alt="logo" class="logo" /></a>
+            <a href="index.html"><img src="assets/logo.png" alt="logo" class="logo" /></a>
 
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
-                    <a href="./" class="nav-link">
+                    <a href="index.html" class="nav-link">
                         <i class="fa-sharp fa-regular fa-thumbtack-angle"></i>
                         <span>Pinned</span>
                     </a>
@@ -160,11 +160,6 @@
                         <span>Menu</span>
                     </a>
                 </li>
-                <!-- <li class="nav-item-toggle">
-                    <a href="#" class="nav-link-toggle" id="dark-mode-toggle-desktop" title="Toggle Dark/Light Mode!">
-                        <i class="fa-regular fa-moon-stars" id="theme-icon-desktop"></i>
-                    </a>
-                </li> -->
             </ul>
         </div>
 
@@ -174,7 +169,7 @@
     <nav class="mobile-bottom-nav">
         <ul>
             <li>
-                <a href="./">
+                <a href="index.html">
                     <span class="icon">
                         <i class="fa-sharp fa-regular fa-thumbtack-angle"></i>
                     </span>
@@ -221,7 +216,7 @@
                         <nav aria-label="breadcrumb" class="breadcrumb-desktop" style="display:none;">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item">
-                                    <a href="./">
+                                    <a href="index.html">
                                         <i class="fa-regular fa-house"></i>
                                     </a>
                                 </li>
