--- a/rail-buddy/settings.html
+++ b/rail-buddy/settings.html
@@ -116,7 +116,7 @@
         <nav aria-label="breadcrumb" style="margin-bottom:0;">
             <ol class="breadcrumb breadcrumb-fixed" id="floating-breadcrumb">
                 <li class="breadcrumb-item">
-                    <a href="../rail-buddy.html">
+                    <a href="index.html">
                         <i class="fa-regular fa-house"></i>
                     </a>
                 </li>
@@ -132,12 +132,12 @@
     <nav class="navbar-container">
         <div class="navbar">
             <!-- Logo -->
-            <a href="../buszy.html"><img src="assets/logo.png" alt="logo" class="logo" /></a>
+            <a href="index.html"><img src="assets/logo.png" alt="logo" class="logo" /></a>
 
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
-                    <a href="../main.html" class="nav-link">
+                    <a href="index.html" class="nav-link">
                         <i class="fa-sharp fa-regular fa-home"></i>
                         <span>Home</span>
                     </a>
@@ -169,7 +169,7 @@
     <nav class="mobile-bottom-nav">
         <ul>
             <li>
-                <a href="../rail-buddy.html">
+                <a href="index.html">
                     <span class="icon">
                         <i class="fa-sharp fa-regular fa-home"></i>
                     </span>
@@ -216,7 +216,7 @@
                         <nav aria-label="breadcrumb" class="breadcrumb-desktop" style="display:none;">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item">
-                                    <a href="../buszy.html">
+                                    <a href="index.html">
                                         <i class="fa-regular fa-house"></i>
                                     </a>
                                 </li>
