--- a/menu.html
+++ b/menu.html
@@ -315,7 +315,8 @@
     <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
         <div class="container">
             <div class="list-group">
-                <a href="works-by-nrfz.html" class="list-group-item list-group-item-action flex-column align-items-start">
+                <a href="works-by-nrfz.html"
+                    class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="d-flex">
                         <div>
                             <h5 class="lg-menu"><i class="fa-regular fa-pen-paintbrush"></i>&nbsp; Works By NRFZ</h5>
@@ -323,8 +324,7 @@
                     </div>
                 </a>
 
-                <a href="blog.html"
-                    class="list-group-item list-group-item-action flex-column align-items-start">
+                <a href="blog.html" class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="d-flex">
                         <div>
                             <h5 class="lg-menu"><i class="fa-regular fa-comment-dots"></i>&nbsp; Blog</h5>
@@ -332,7 +332,8 @@
                     </div>
                 </a>
 
-                <a href="https://worksbynrfz.com" class="list-group-item list-group-item-action flex-column align-items-start">
+                <a href="https://worksbynrfz.com"
+                    class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="d-flex">
                         <div>
                             <h5 class="lg-menu"><i class="fa-regular fa-grid"></i>&nbsp; Apps</h5>
@@ -364,6 +365,10 @@
                     <a href="https://www.instagram.com/nrfzlkf/" class="social-link">
                         <i class="fa-brands fa-instagram" aria-hidden="true"></i>
                     </a>
+                </div>
+
+                <div class="footer-copy">
+                    © 2026 Nurafian Zulkifli
                 </div>
             </div>
     </section>
