--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>NRFZ | Home</title>
+    <title>Home | NRFZ</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
@@ -178,7 +178,7 @@
                     <div class="col-12">
                         <div class="section-heading text-center wow fadeIn" data-wow-delay="100ms">
                             <h1><a href="https://en.wikipedia.org/wiki/Jack_of_all_trades"
-                                    style="font-size: 20px; color: #5f6051;">"Jack of all trades, master of
+                                    style="font-size: 20px; color: #7e899a;">"Jack of all trades, master of
                                     none"</a></h2>
                         </div>
                     </div>
