--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -61,7 +61,7 @@
     <nav class="navbar-container">
         <div class="navbar">
             <!-- Logo -->
-            <a href="./"><img src="../img/core-img/logo.png" alt="logo" class="logo"></a>
+            <a href="../index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo"></a>
 
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
