--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
 </head>
 
 <body>
-
     <!-- Navigation Bar -->
     <nav class="navbar-container">
         <div class="navbar">
@@ -281,7 +280,7 @@
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
-    <script src="js/navtabs.js"></script>
+    <script src="js/mob-navtabs.js"></script>
 
     <script src="js/theme-index.js"></script>
 
