--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -150,7 +150,7 @@
                         <nav aria-label="breadcrumb" class="breadcrumb-desktop" style="display:none;">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item">
-                                    <a href="./">
+                                    <a href="../index.html">
                                         <i class="fa-regular fa-house"></i>
                                     </a>
                                 </li>
