--- a/about.html
+++ b/about.html
@@ -166,19 +166,19 @@
 
                     <ul>
                         <li>
-                            <a href="#summary" class="active">Summary</a>
+                            <a href="#summary" class="active"><i class="fa-regular fa-clipboard-list"></i> Summary</a>
                         </li>
 
                         <li>
-                            <a href="#tm">Timelines & Milestones</a>
+                            <a href="#tm"><i class="fa-regular fa-timeline"></i> Timelines-Milestones</a>
                         </li>
 
                         <li>
-                            <a href="#lppl">Language Proficiency</a>
+                            <a href="#lppl"><i class="fa-regular fa-language"></i> Language Proficiency</a>
                         </li>
 
                         <li>
-                            <a href="#lppl">Programming Languages</a>
+                            <a href="#lppl"><i class="fa-regular fa-code"></i> Programming Languages</a>
                         </li>
                     </ul>
 
