--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -52,6 +52,10 @@
           <a href="menu.html"><i class="fa-regular fa-bars"></i>
           </a>
         </li>
+        <li class="breadcrumb-item">
+          <a href="works-by-nrfz.html"><i class="fa-regular fa-pen-paintbrush"></i>
+          </a>
+        </li>
       </ol>
     </nav>
   </div>
@@ -71,7 +75,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="about.html" class="nav-link active">
+          <a href="about.html" class="nav-link">
             <i class="fa-regular fa-circle-user"></i>
             <span>About</span>
           </a>
@@ -104,7 +108,7 @@
           <span class="label">Home</span>
         </a>
       </li>
-      <li class="active">
+      <li>
         <a href="about.html">
           <span class="icon">
             <i class="fa-regular fa-circle-user"></i>
@@ -120,7 +124,7 @@
           <span class="label">EICW</span>
         </a>
       </li>
-      <li>
+      <li class="active">
         <a href="menu.html">
           <span class="icon">
             <i class="fa-regular fa-bars"></i>
@@ -144,6 +148,10 @@
                 <li class="breadcrumb-item">
                   <a href="../index.html">
                     <i class="fa-regular fa-house"></i>
+                  </a>
+                </li>
+                <li class="breadcrumb-item">
+                  <a href="menu.html"><i class="fa-regular fa-bars"></i>
                   </a>
                 </li>
                 <li class="breadcrumb-item">
@@ -179,27 +187,28 @@
 
           <ul>
             <li>
-              <a href="#" class="btn-filter active" data-filter="*">All Projects</a>
+              <a href="#" class="btn-filter active" data-filter="*"><i class="fa-regular fa-pen-paintbrush"></i> All
+                Projects</a>
             </li>
 
             <li>
-              <a href="#" class="btn-filter" data-filter=".ds">Designs</a>
+              <a href="#" class="btn-filter" data-filter=".ds"><i class="fa-regular fa-brush"></i> Designs</a>
             </li>
 
             <li>
-              <a href="#" class="btn-filter" data-filter=".mc">Mockups</a>
+              <a href="#" class="btn-filter" data-filter=".mc"><i class="fa-regular fa-object-ungroup"></i> Mockups</a>
             </li>
 
             <li>
-              <a href="#" class="btn-filter" data-filter=".ig">Infographics</a>
+              <a href="#" class="btn-filter" data-filter=".ig"><i class="fa-regular fa-chart-pie"></i> Infographics</a>
             </li>
 
             <li>
-              <a href="#" class="btn-filter" data-filter=".lg">Logos</a>
+              <a href="#" class="btn-filter" data-filter=".lg"><i class="fa-regular fa-shapes"></i> Logos</a>
             </li>
 
             <li>
-              <a href="#" class="btn-filter" data-filter=".in">Innovations</a>
+              <a href="#" class="btn-filter" data-filter=".in"><i class="fa-regular fa-lightbulb"></i> Innovations</a>
             </li>
           </ul>
 
