--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="https://i.imgur.com/498xWqm.png" alt="Work 2">
+                        <img src="https://i.imgur.com/kO8E6vB.png" alt="Work 2">
                         <div class="card-content">
                             <h3>RailBuddy - Stay on track, always</h3>
                             <a href="https://worksbynrfz.com/rail-buddy" class="pw-btn-small btn-2"><i
