--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -256,7 +256,7 @@
           </div>
 
           <div class="card in" data-date="2025-01-01">
-            <img src="https://i.imgur.com/498xWqm.png" alt="tdc-v3">
+            <img src="https://i.imgur.com/kO8E6vB.png" alt="rlb-v4">
             <div class="card-content">
               <h3>RailBuddy - Stay on track, always</h3>
               <a href="worksbynrfz/delays-checker.html" class="pw-btn-small btn-2"><i
