--- a/blog.html
+++ b/blog.html
@@ -82,9 +82,9 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="blog.html" class="nav-link active">
-                        <i class="fa-regular fa-comment-dots"></i>
-                        <span>Blog</span>
+                    <a href="menu.html" class="nav-link active">
+                        <i class="fa-regular fa-bars"></i>
+                        <span>Menu</span>
                     </a>
                 </li>
             </ul>
