--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -15,7 +15,7 @@
 
   <link rel="icon" href="img/core-img/favicon.png">
 
-  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.0.0/css/all.css" />
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.2.0/css/all.css" />
 
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/style-mobNav.css">
@@ -87,7 +87,7 @@
           </a>
         </li>
         <li class="nav-item ">
-          <a href="menu.html" class="nav-link">
+          <a href="menu.html" class="nav-link active">
             <i class="fa-regular fa-bars"></i>
             <span>Menu</span>
           </a>
