--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -45,7 +45,7 @@
         <nav aria-label="breadcrumb" style="margin-bottom:0;">
             <ol class="breadcrumb breadcrumb-fixed" id="floating-breadcrumb">
                 <li class="breadcrumb-item">
-                    <a href="./">
+                    <a href="../index.html">
                         <i class="fa-regular fa-house"></i>
                     </a>
                 </li>
