--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>NRFZ | Blog</title>
+    <title>Blog | NRFZ</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
@@ -266,7 +266,7 @@
                         <img src="https://i.imgur.com/0CCS3Ks.png" alt="Work 4">
                         <div class="card-content">
                             <h3>Personal V4 - A big redesign</h3>
-                            <a href="blog/personal-v4.html" class="pw-btn-small btn-2"><i
+                            <a href="blog/personal-v4-1.html" class="pw-btn-small btn-2"><i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
