2026-04 Feature Update for NRFZ

--- a/blog.html
+++ b/blog.html
@@ -226,14 +226,14 @@
 
             <div class="container">
                 <div class="wbnrfz-grid">
-                    <div class="card wbd" data-date="2025-06-01">
+                    <!-- <div class="card wbd" data-date="2025-06-01">
                         <img src="https://i.imgur.com/2GkeIsN.png" alt="Work 1">
                         <div class="card-content">
                             <h3>Personal Version 6.1 - Improving Consistencies</h3>
                             <a href="blog/personal-v6-1.html" class="pw-btn-small btn-2"><i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
-                    </div>
+                    </div> -->
 
                     <div class="card wbd" data-date="2025-06-01">
                         <img src="https://i.imgur.com/2GkeIsN.png" alt="Work 1">
