--- a/menu.html
+++ b/menu.html
@@ -336,7 +336,7 @@
                     class="list-group-item list-group-item-action flex-column align-items-start">
                     <div class="d-flex">
                         <div>
-                            <h5 class="lg-menu"><i class="fa-regular fa-grid"></i>&nbsp; Apps</h5>
+                            <h5 class="lg-menu"><i class="fa-regular fa-external-link"></i>&nbsp; Apps</h5>
                         </div>
                     </div>
                 </a>
