--- a/eicw/eicw-2.html
+++ b/eicw/eicw-2.html
@@ -1400,7 +1400,7 @@
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
-    <script src="../js/navtabs.js"></script>
+    <script src="../js/mob-navtabs.js"></script>
 
     <script src="js/eicw-2.js"></script>
 
