--- a/worksbynrfz/buszy.html
+++ b/worksbynrfz/buszy.html
@@ -50,12 +50,12 @@
     <nav aria-label="breadcrumb" style="margin-bottom:0;">
       <ol class="breadcrumb breadcrumb-fixed" id="floating-breadcrumb">
         <li class="breadcrumb-item">
-          <a href="./">
+          <a href="../index.html">
             <i class="fa-regular fa-house"></i>
           </a>
         </li>
         <li class="breadcrumb-item">
-          <a href="menu.html"><i class="fa-regular fa-bars"></i>
+          <a href="../menu.html"><i class="fa-regular fa-bars"></i>
           </a>
         </li>
         <li class="breadcrumb-item">
