--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -247,7 +247,7 @@
 
       <div class="container">
         <div class="wbnrfz-grid">
-          <div class="card ds" data-date="2025-11-30">
+          <div class="card in" data-date="2025-11-30">
             <img src="https://i.imgur.com/fekfd0k.png" alt="buszy">
             <div class="card-content">
               <h3>Buszy - Bus Arrival Timings</h3>
