2026-04 Feature Update for NRFZ

--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -36,8 +36,6 @@
 
 </head>
 
-</head>
-
 <body>
 
     <!-- Fixed Breadcrumb at very top (mobile/tablet only) -->
@@ -161,10 +159,10 @@
                             </ol>
                         </nav>
                         <div class="page-title-wrapper">
-                                <div>
-                                    <h1 class="page-title-single">Experimenting Improvements of Current Wayfinding</h1>
-                                    <p class="page-subtitle">4 mins read</p>
-                                </div>
+                            <div>
+                                <h1 class="page-title-single">Experimenting Improvements of Current Wayfinding</h1>
+                                <p class="page-subtitle">4 mins read</p>
+                            </div>
 
                         </div>
                     </div>
@@ -181,7 +179,8 @@
 
                     <ul id="scrollableTabs">
                         <li>
-                            <a href="eicw.html" class="active"><i class="fa-regular fa-circle-info"></i> Introduction</a>
+                            <a href="eicw.html" class="active"><i class="fa-regular fa-circle-info"></i>
+                                Introduction</a>
                         </li>
 
                         <li>
@@ -239,8 +238,7 @@
                         <div class="row justify-content-center">
 
                             <!-- Preface -->
-                            <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms" id="dsi"
-                                style="padding-top: 3em;">
+                            <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms" id="dsi" style="padding-top: 3em;">
                                 <div class="info justify-content-center">
                                     <h2 style="font-size: 30px; font-weight:bold;">Design
                                         System Introduction</h2>
