--- a/eicw/btr-1.html
+++ b/eicw/btr-1.html
@@ -19,6 +19,7 @@
   <link rel='stylesheet' href='https://unpkg.com/swiper@6.8.1/swiper-bundle.min.css'>
 
   <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/style-mobNav.css">
   <link rel="stylesheet" href="../css/style-breakpoints.css">
   <link rel="stylesheet" href="../css/dark-mode.css">
 
@@ -34,122 +35,100 @@
 
 </head>
 
-</head>
-
 <body>
+
+  <!-- Fixed Breadcrumb at very top (mobile/tablet only) -->
+  <div class="breadcrumb-fixed-placeholder">
+    <nav aria-label="breadcrumb" style="margin-bottom:0;">
+      <ol class="breadcrumb breadcrumb-fixed" id="floating-breadcrumb">
+        <li class="breadcrumb-item">
+          <a href="../index.html">
+            <i class="fa-regular fa-house"></i>
+          </a>
+        </li>
+        <li class="breadcrumb-item">
+          <a href="eicw-2.html"><i class="fa-regular fa-train"></i>
+          </a>
+        </li>
+      </ol>
+    </nav>
+  </div>
 
   <!-- Navigation Bar -->
   <nav class="navbar-container">
     <div class="navbar">
       <!-- Logo -->
-      <a href="../index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
+      <a href="../index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo"></a>
 
       <!-- Navigation Links -->
       <ul class="navbar-nav" id="navbarNav">
         <li class="nav-item">
           <a href="../index.html" class="nav-link">
-            <i class="fa-solid fa-house"></i>
+            <i class="fa-sharp fa-regular fa-house"></i>
             <span>Home</span>
           </a>
         </li>
         <li class="nav-item">
           <a href="../about.html" class="nav-link">
-            <i class="fa-solid fa-circle-user"></i>
+            <i class="fa-regular fa-circle-user"></i>
             <span>About</span>
           </a>
         </li>
         <li class="nav-item">
-          <a href="../works-by-nrfz.html" class="nav-link">
-            <i class="fa-solid fa-pen-paintbrush"></i>
-            <span>Works By NRFZ</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link active">
-            <i class="fa-solid fa-map-location"></i>
+          <a href="../eicw/eicw.html" class="nav-link active">
+            <i class="fa-regular fa-map-location"></i>
             <span>EICW</span>
           </a>
         </li>
-        <li class="nav-item">
-          <a href="../blog.html" class="nav-link">
-            <i class="fa-solid fa-comment"></i>
-            <span>Blog</span>
-          </a>
-        </li>
-        <li class="nav-item-toggle">
-          <a href="#" class="nav-link-toggle" id="dark-mode-toggle-desktop" title="Toggle Dark/Light Mode!">
-            <i class="fa-solid fa-moon-stars" id="theme-icon-desktop"></i>
+        <li class="nav-item ">
+          <a href="../menu.html" class="nav-link">
+            <i class="fa-regular fa-bars"></i>
+            <span>Menu</span>
           </a>
         </li>
       </ul>
-
-      <!-- Mobile Toggle -->
-      <button class="mobile-toggle" id="mobileToggle">
-        <div class="hamburger">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-      </button>
     </div>
 
-    </div>
   </nav>
 
-  <!-- Mobile Menu Overlay -->
-  <div class="mobile-menu-overlay" id="mobileMenuOverlay"></div>
-
-  <!-- Mobile Menu -->
-  <div class="mobile-menu" id="mobileMenu">
-    <div class="mobile-menu-header">
-      <a href="#" class="mobile-menu-brand">
-        <span class="brand-text">
-          <li class="mobile-menu-item mobile-theme-toggle">
-            <button class="wbnrfz_btn_theme mobile-theme-btn" id="dark-mode-toggle-mobile"
-              title="Toggle Dark/Light Mode!">
-              <i class="fa-solid fa-moon-stars" id="theme-icon-mobile"></i>
-            </button>
-          </li>
-        </span>
-      </a>
-      <button class="mobile-menu-close" id="mobileMenuClose">
-        <span>×</span>
-      </button>
-    </div>
-
-    <ul class="mobile-menu-nav">
-      <li class="mobile-menu-item">
-        <a href="../index.html" class="mobile-menu-link">
-          <i class="fa-solid fa-regular fa-house"></i>
-          <span>Home</span>
+  <!-- Mobile Bottom Navigation Bar -->
+  <nav class="mobile-bottom-nav">
+    <ul>
+      <li>
+        <a href="../index.html">
+          <span class="icon">
+            <i class="fa-sharp fa-regular fa-house"></i>
+          </span>
+          <span class="label">Home</span>
         </a>
       </li>
-      <li class="mobile-menu-item">
-        <a href="../about.html" class="mobile-menu-link">
-          <i class="fa-solid fa-regular fa-circle-user"></i>
-          <span>About</span>
+      <li>
+        <a href="../about.html">
+          <span class="icon">
+            <i class="fa-regular fa-circle-user"></i>
+          </span>
+          <span class="label">About</span>
         </a>
       </li>
-      <li class="mobile-menu-item">
-        <a href="../works-by-nrfz.html" class="mobile-menu-link">
-          <i class="fa-solid fa-pen-paintbrush"></i>
-          <span>Works By NRFZ</span>
+      <li class="active">
+        <a href="../eicw/eicw.html">
+          <span class="icon">
+            <i class="fa-regular fa-map-location"></i>
+          </span>
+          <span class="label">EICW</span>
         </a>
       </li>
-      <li class="mobile-menu-item">
-        <a href="#" class="mobile-menu-link active">
-          <i class="fa-solid fa-map-location"></i>
-          <span>EICW</span>
-        </a>
-      </li>
-      <li class="mobile-menu-item">
-        <a href="../blog.html" class="mobile-menu-link">
-          <i class="fa-solid fa-comment"></i>
-          <span>Blog</span>
+      <li>
+        <a href="../menu.html">
+          <span class="icon">
+            <i class="fa-regular fa-bars"></i>
+          </span>
+          <span class="label">Menu</span>
         </a>
       </li>
     </ul>
-  </div>
+  </nav>
+
 
   <!-- Scroll Indicator -->
   <div id="scroll-indicator-container">
@@ -158,32 +137,22 @@
 
 
   <!------------------------------------------------------------------------ Start of Sections ------------------------------------------------------------------------>
-
-  <!-- Cover Header -->
-  <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="covbtr-img">
-    <div class="container h-100">
-      <div class="row h-100 align-items-center">
-        <div class="col-12">
-        </div>
-      </div>
-    </div>
-  </section>
-
   <!-- Title/Breadcrumbs -->
   <section class="about-me-sum clearfix">
     <div class="wbnrfz_eicw">
       <div class="page-header-section">
         <div class="container-xxl container-mobile container-mobile-header">
           <div class="breadcrumb-wrapper">
-            <nav aria-label="breadcrumb">
+            <nav aria-label="breadcrumb" class="breadcrumb-desktop" style="display:none;">
               <ol class="breadcrumb">
                 <li class="breadcrumb-item">
                   <a href="../index.html">
-                    <i class="fa-solid fa-house"></i>
+                    <i class="fa-regular fa-house"></i>
                   </a>
                 </li>
                 <li class="breadcrumb-item">
-                  <a href="#">EICW</a>
+                  <a href="btr-1.html"><i class="fa-regular fa-eye"></i>
+                  </a>
                 </li>
               </ol>
             </nav>
@@ -205,27 +174,28 @@
 
           <ul id="scrollableTabs">
             <li>
-              <a href="eicw.html">Design System Introduction</a>
+              <a href="eicw.html"><i class="fa-regular fa-circle-info"></i>
+                Introduction</a>
             </li>
 
             <li>
-              <a href="eicw-2.html">Proposed Wayfinding Changes - Trains</a>
+              <a href="eicw-2.html"><i class="fa-regular fa-train"></i> Trains</a>
             </li>
 
             <li>
-              <a href="eicw-3.html">Proposed Wayfinding Changes - Buses</a>
+              <a href="eicw-3.html"><i class="fa-regular fa-bus"></i> Buses</a>
             </li>
 
             <li>
-              <a href="eicw-4.html">Proposed UI/UX Changes</a>
+              <a href="eicw-4.html"><i class="fa-regular fa-pencil"></i> UI/UX</a>
             </li>
 
             <li>
-              <a href="eicw-5.html">Rethinking CCL6 Signages</a>
+              <a href="eicw-5.html"><i class="fa-regular fa-signs-post"></i> CCL6 Signages</a>
             </li>
 
             <li>
-              <a href="btr-1.html" class="active">Behind The Redesign</a>
+              <a href="btr-1.html" class="active"><i class="fa-regular fa-eye"></i> Behind The Redesign</a>
             </li>
           </ul>
 
@@ -242,6 +212,16 @@
 
     </div>
 
+  </section>
+
+  <!-- Cover Header -->
+  <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="covbtr-img">
+    <div class="container h-100">
+      <div class="row h-100 align-items-center">
+        <div class="col-12">
+        </div>
+      </div>
+    </div>
   </section>
 
   <!-- Section Content 1 -->
