--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -168,7 +168,7 @@
               <div class="port-search-wrapper">
                 <i class="fa-solid fa-search"
                   style="position: absolute; left: 12px; top: 54%; transform: translateY(-54%); color: #cccccc; z-index: 1;"></i>
-                <input type="text" id="search-input" class="form-control" placeholder=" Search for a project"
+                <input type="text" id="search-input" class="form-control" placeholder=" Search Projects"
                   style="padding-left: 35px; width: 100%;">
               </div>
 
