--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
 
 </head>
 
+<style>
+    .card-content {
+        opacity: 1 !important;
+        visibility: visible !important;
+        position: absolute !important;
+    }
+</style>
+
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar-container">
@@ -121,11 +129,8 @@
     </section><!-- End Hero -->
 
     <div class="main-content">
-        <section class="wbnrfz-works">
+        <section class="wbnrfz-works floating-cards">
             <div class="container">
-                <div class="section-heading text-center wow fadeIn" data-wow-delay="100ms">
-                    <h2>Featured Works</h2>
-                </div>
                 <div class="wbnrfz-grid wow fadeIn" data-wow-delay="300ms">
                     <div class="card">
                         <img src="https://i.imgur.com/fekfd0k.png" alt="Work 1">
